    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_checksum.py:
  Only prelink-check when requested -- This is only valid for merge/unmerge
  operations -- Also happens to fix the access violations in portageq.

  31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Adjustments
  for the prelink-check changes.

  31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_exception.py:
  Made the exceptions more hierarchial. Yes, I'm aware I can't speel.

  30 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Added 
  solar's patch to make the file.size check display the size of the 
  offender.

  30 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py, 
  pym/portage_util.py: Removed -all- duplicate function definitions between 
  portage_util and portage.  This is just -begging- for a bug where 
  portage.py's definitions are fixed, but portage_util isn't.
  If you're moving code out of portage.py (good thing) please yank the def 
  from portage.py.  Especially if you're importing everything from new 
  home of the module.

  30 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> pym/emerge: Added python 2.2
  compatibility fix. (#62128) Added fix to fail nicely on missing
  /etc/gentoo-release. (#62149)

  30 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Fixed two
  bugs in bindbapi.aux_get() preventing retrieval of information about tbz2s.

  26 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/etc-update: minor 
  tweak to etc-update to support single quotes in /etc/etc-update.conf
  bug (#56785).  Added Mamoru Komachi (usata)'s fix for osx (#60721).

  26 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py, 