@@ -10,6 +10,9 @@
        It is for convenience. Do not mistake this for the actual file.
 
   31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_checksum.py:
+  Solar's patch to check if prelink binary exists prior to executing it.
+
+  31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_checksum.py:
   Only prelink-check when requested -- This is only valid for merge/unmerge
   operations -- Also happens to fix the access violations in portageq.
 
